APEX-823: Basic theme implementation

--- a/docroot/themes/custom/ecom/templates/layout/page--front.html.twig
+++ b/docroot/themes/custom/ecom/templates/layout/page--front.html.twig
@@ -42,7 +42,7 @@
  * @see html.html.twig
  */
 #}
-<div id="wrapper front-page"  {{ attributes }}>
+<div id="wrapper" class="front-page"  {{ attributes }}>
   {% include '@ecom/includes/header.html.twig' %}
   <div class="main-contane">
     {% if page.pre_content %}
