--- a/source/themes/custom/ecom/styles/base/_layout.scss
+++ b/source/themes/custom/ecom/styles/base/_layout.scss
@@ -11,14 +11,12 @@ body.user-logged-in {
 }
 
 .wrapper-content {
-  max-width: 1000px;
+  width: 86%;
   margin: 0 auto;
   word-wrap: break-word;
   @media only screen and (max-width: $tablet-max) {
     padding: 0 20px;
-  }
-  @media only screen and (min-width: $tablet-max) {
-    width: 1000px;
+    width: 100%;
   }
 
   .wrapper-content {
