--- a/source/themes/custom/ecom/styles/base/_variables.scss
+++ b/source/themes/custom/ecom/styles/base/_variables.scss
@@ -1,14 +1,38 @@
 /****** colors ******/
-$white: #FFFFFF;
+$silver: #BBBBBB;
+$silver-secondary: #CDCDCD;
+$light-silver: #D6D6D6;
+$gray: #CCCCCC;
+$gray-secondary: #7E7E7E;
+$dim-gray: #737373;
+$light-gray: #EEEEEE;
+$dark-gray: #222222;
 $black: #000000;
-$red: #CC0000;
+$nero: #161616;
+$lighter-gray: #666666;
+$white: #FFFFFF;
 $pantone: #19975D;
-
-/**
- * INPUTS
- */
-$input-height: 3.125rem;
-$input-height-small: 2.25rem;
+$pantone-dark: #1A975D;
+$menu-hover: #384E53;
+$hamburger-menu: #2B2B30;
+$slider-txt-seperate: #34CB97;
+$light-black: #333333;
+$para: #585858;
+$alto: #D3D3D3;
+$filter-bg: #F9F9F9;
+$mustard: #FCD344;
+$dark-olive: #3D6611;
+$ivory: #FAFAEC;
+$spanish-gray: #999999;
+$platinum: #E6E6E6;
+$dark-spring-green: #26723E;
+$honeydew: #DCF3E3;
+$aero-blue: #BDE9CB;
+$table-even: #F0F0F0;
+$table-border: #D8D8D8;
+$racing-red: #CC0000;
+$sinopia: #D3461F;
+$lapis-lazuli: #00599C;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
@@ -23,8 +47,8 @@ $bold: bold;
 $bolder: bolder;
 
 /****** base path ******/
-$image-base-path: '../../ecom/images';
-$icon-base-path: '../../ecom/icons';
+$image-base-path: '../../campbell/images';
+$icon-base-path: '../../campbell/icons';
 
 /****** breakpoint ******/
 $mobile: 359px;
