--- a/source/themes/custom/ecom/styles/components/_imports.scss
+++ b/source/themes/custom/ecom/styles/components/_imports.scss
@@ -5,4 +5,21 @@
 
 @import
 'footer',
-'header';
+'header',
+'banner',
+'products-page',
+'featured-detail-page',
+'product-listing',
+'pagination',
+'breadcrumb',
+'product-detail-page',
+'features',
+'contact',
+'acccordion',
+'user',
+'page-not-found',
+'about-us',
+'signup',
+'privacy-policy',
+'product-search',
+'page-search';
