--- a/source/themes/custom/ecom/styles/base/_button.scss
+++ b/source/themes/custom/ecom/styles/base/_button.scss
@@ -9,7 +9,7 @@
   text-decoration: none;
   font-weight: bold;
   width: auto;
-  background: $pantone;
+  background: linear-gradient(0deg, $pantone, $pantone-dark 80%);
   border-radius: 8px;
   border: solid 1px $pantone;
   color: $white;
@@ -20,4 +20,81 @@
     color: $black;
     border: solid 1px $pantone;
   }
+}
+
+// Button distributor.
+.btn-distributor {
+  font-size: 12px;
+  padding: 3px 20px;
+  display: inline-flex;
+  align-items: center;
+
+  &:hover,
+  &:focus,
+  &:focus-visible {
+    color: $white;
+  }
+
+  &::before {
+    content: '';
+    width: 20px;
+    height: 20px;
+    background: url('#{$image-base-path}/small_icons.png') left -238px no-repeat;
+    display: inline-block;
+    padding-left: 32px;
+    vertical-align: middle;
+    line-height: 22px;
+  }
+}
+
+// Button download.
+.btn-download {
+  font-size: 12px;
+  padding: 3px 20px;
+  display: inline-flex;
+  align-items: center;
+
+  &:hover,
+  &:focus,
+  &:focus-visible {
+    color: $black;
+  }
+
+  &::before {
+    content: '';
+    width: 20px;
+    height: 20px;
+    background: url('#{$image-base-path}/small_icons.png') left -187px no-repeat;
+    display: inline-block;
+    padding-left: 32px;
+    vertical-align: middle;
+    line-height: 22px;
+  }
+}
+
+// Button for featured product instapage
+.sling.hooks,
+.swivel-hoisthooks,
+.eye-hoist-hooks {
+  text-decoration: none;
+  color: $white;
+  padding: 15px;
+  border-radius: 5px;
+
+  &:hover {
+    text-decoration: none;
+    background-color: $spanish-gray;
+  }
+}
+
+.sling.hooks {
+  background-color: $pantone;
+}
+
+.swivel-hoisthooks {
+  background-color: $sinopia;
+}
+
+.eye-hoist-hooks {
+  background-color: $lapis-lazuli;
 }
